# LuminaNT

./: .env.example  .gitignore  Launch LuminaNT (demo browser).bat  Launch LuminaNT (dev).bat  Launch LuminaNT.bat  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
demo-data/: PLACE_THESE.md  config.yaml  edges.jsonl  example_evidence.json
docs/: DESIGN_PR6_13_REMAINING.md  PHASE0_DIAGNOSTIC.md  PHASE1_CAPITAL_STRIP.md  PHASE1_CHECKPOINT_OPEN_RISK_AND_SETTLEMENT_DAY.md  PHASE2_CAPITAL_UI.md  PROFESSIONAL_STANDARDS_CHECKLIST.md
public/demo-data/: bankroll.json  bets.csv  coverage_health.json  deep_queue.json  phase.json  reasoning_chains.jsonl  risk.json  status.md
scripts/: create-desktop-shortcut.ps1  free-dev-port.ps1
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: henry.w@example.net
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/nt/: cli.rs  git.rs  loader.rs  mod.rs  models.rs  paths.rs
src/components/: ErrorBoundary.tsx
src/hooks/: use-os-notifications.ts  use-tracker-data.ts
src/lib/: agent.ts  aiModels.test.ts  aiModels.ts  analytics.settlementDay.test.ts  analytics.ts  boardFreshness.test.ts  boardFreshness.ts  calibration.ts  capital.ts  charts.equityAxis.test.ts  charts.openRisk.test.ts  charts.ts  coverageChip.ts  demo-data.ts  emptySlip.deskChips.test.ts  emptySlip.test.ts  emptySlip.ts  gateChips.ts  keyboard.ts  markets.ts  ntSafety.test.ts  (+19 more)
(+58 files in other folders)
