[package]
name = "luminant"
version = "1.0.0"
description = "LuminaNT — premium visual dashboard for NT Betting Tracker"
authors = ["LuminaNT"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "luminant_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
csv = "1.3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
